2008-12-23  Simon Kallweit  <simon.kallweit@intefo.ch>

	* src/synth.c: Implemented simulation of proper NOR flash writes.
	General cleanup.

2008-12-18  Simon Kallweit  <simon.kallweit@intefo.ch>

	* src/synth.c: Fixed error check of mmap call.

2008-11-28  Sergei Gavrikov  <sergei.gavrikov@gmail.com>

	* tests/flash[23].c: Fixed copy'n'paste typos in a naming: flash1 ->
	flash{2,3}.

2008-11-19  Simon Kallweit  <simon.kallweit@intefo.ch>

	* src/synth.c: Removed cyg_hal_sys_do_mmap() wrapper function.
	* tests/flash1.c, tests/flash2.c, tests/flash3.c:
	Fixed a few compiler warnings.

2004-12-02  Bart Veer  <bartv@ecoscentric.com>

	* include/synth.h, src/synth.c: explicitly include
	<cyg/io/flash_dev.h> rather than just defining _FLASH_PRIVATE_

2004-11-29  Bart Veer  <bartv@ecoscentric.com>

	* src/synth.c: eliminate hwr_map_error() support, no longer needed
	
	* src/synth.c: use the dummy lock/unlock functions provided by the
	generic flash package.

2004-11-22  Bart Veer  <bartv@ecoscentric.com>

	* include/synth.h, src/synth.c, tests/flash3.c: merge the config
	and priv structures. Adjust device driver API as per changes to
	the generic flash code.
	* tests/flash2.c, tests/flash3.c: do not depend on both synthetic
	flash drivers being loaded.
	* include/synth.h (struct cyg_flash_synth_priv): rename
	cyg_block_info to cyg_flash_block_info

2004-11-21  Bart Veer  <bartv@ecoscentric.com>

	* tests/flash1.c (cyg_user_start):
	CYGSEM_IO_FLASH_LEGACY_DEVICE_API has been removed, use
	CYGHWR_IO_FLASH_DEVICE_LEGACY instead
	* cdl/flash_synth.cdl: CYGHWR_IO_FLASH_DEVICE_V2 is now implicit

2004-09-14  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/synth.c (synth_flash_erase_block): Remove asserts which are
	no longer true.

2004-09-09  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flash_synth.c: Allow the use of arbitary sized block.
	* test/flash3.c: Allow the use of small blocks

2004-08-21  Andrew Lunn  <andrew.lunn@ascom.ch>
